@@ -1,3 +1,9 @@
+1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* Makefile.am: Remove the GNATMAKE alias as it will be defined by
+	configure.
+	Replace ${} by $() so that it doesn't confuse automake any longer.
+
 1999-04-08  Laurent Pautet  <pautet@scapin.enst.fr>
 
 	* xe_back.adb, xe_back.ads, xe_check.adb, xe_stubs.adb,
